--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "astro-icon": "^0.7.3",
-    "preact": "^10.7.3"
+    "preact": "^10.7.3",
+    "react-icons": "^4.4.0"
   }
 }
