--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,12 @@
     "strict": true,
     // Error when a value import is only used as a type.
     "importsNotUsedAsValues": "error",
-		"types": ["@astrojs/image/client"]
+		"types": ["@astrojs/image/client"],
+		"baseUrl": ".",
+    "paths": {
+      "@components/*": ["src/components/*"],
+      "@assets/*": ["src/assets/*"]
+    }
+
   }
 }
